--- a/lab/lab02_01.html
+++ b/lab/lab02_01.html
@@ -20,9 +20,20 @@
                font-size: 20px;
         }
 </style>
+    <script>
+        function show() { // <img>에 이미지 달기
+            document.getElementById("fig").src = "images/ElvisPresley.png"
+        }
+        function hide() { // <img>에 이미지 제거
+            document.getElementById("fig").src= "";
+        }
+</script>
+
 </head>
 <body>
-<h3>Elvis Presley</h3>
+<h3 onmouseover="show()" onmouseout="hide()"> Elvis Presley</h3>
+<hr>
+<div><img id="fig" src=""></div>
 <hr>
 He was an American singer and actor. In November 1956, he
 made his film debut in <span>Love Me Tender</span>. He
