--- a/reports/report01.html
+++ b/reports/report01.html
@@ -17,10 +17,12 @@
     <label>개인 홈페이지 <input type="url" size="30"></label><br>
     <label>주소* <input type="text" size="30"><br></label><br>
 
-    이름* <input type="text" size="8"><br>
-    이름* <input type="text" size="8"><br>
-    이름* <input type="text" size="8"><br>
-    이름* <input type="text" size="8"><br><br>
+    <label>학교 명* <input type="text" size="12"></label><br>
+    <label>전공* <input type="text" size="12"></label><br>
+
+
+    <label>근무업체명 <input type="text" size="20"></label><br>
+    <label>직위 <input type="text" size="10"></label><br>
 
 </form>
 </body>
