--- a/reports/report01.html
+++ b/reports/report01.html
@@ -19,10 +19,13 @@
 
     <label>학교 명* <input type="text" size="12"></label><br>
     <label>전공* <input type="text" size="12"></label><br>
+    <label>졸업여부* <input type="text" size="8"></label><br>
 
 
     <label>근무업체명 <input type="text" size="20"></label><br>
     <label>직위 <input type="text" size="10"></label><br>
+    <label>담당업무 <textarea cols="80" rows="10">이전 업체에서 담당한 업무를 기술하시오.
+    </textarea></label>
 
 </form>
 </body>
