--- a/reports/report01.html
+++ b/reports/report01.html
@@ -10,11 +10,11 @@
 <div>기본 정보</div><br>
 <form>
     <label>이름* <input type="text" size="8"></label><br>
-    <label>이메일* <input type="email" size="15"></label><br>
+    <label>이메일* <input type="email" size="15" placeholder="id@domain_name"></label><br>
     <label>암호* <input type="password" size="12"></label><br>
     <label>암호 확인* <input type="password" size="12"></label><br>
-    <label>모바일 폰* <input type="tel" size="13"></label><br>
-    <label>개인 홈페이지 <input type="url" size="30"></label><br>
+    <label>모바일 폰* <input type="tel" size="13" placeholder="010-0000-0000"></label><br>
+    <label>개인 홈페이지 <input type="url" size="30" placeholder="http://"></label><br>
     <label>주소* <input type="text" size="30"><br></label><br>
 
     <label>학교 명* <input type="text" size="12"></label><br>
@@ -25,7 +25,8 @@
     <label>근무업체명 <input type="text" size="20"></label><br>
     <label>직위 <input type="text" size="10"></label><br>
     <label>담당업무 <textarea cols="80" rows="10">이전 업체에서 담당한 업무를 기술하시오.
-    </textarea></label>
+    </textarea></label><br>
+    <label>근무년수 <input type="number" min="0.0" max="10.0" step="0.5"></label><br>
 
 </form>
 </body>
