--- a/reports/report01.html
+++ b/reports/report01.html
@@ -19,7 +19,14 @@
 
     <label>학교 명* <input type="text" size="12"></label><br>
     <label>전공* <input type="text" size="12"></label><br>
-    <label>졸업여부* <input type="text" size="8"></label><br>
+    <label>졸업여부*
+        <select name="graduation">
+            <option value="1" >--선택--</option>
+            <option value="2">졸업예정</option>
+            <option value="3">졸업</option>
+        </select>
+    </label><br>
+    <label>졸업(예정)일 <input type="date"></label><br>
 
 
     <label>근무업체명 <input type="text" size="20"></label><br>
