--- a/reports/report01.html
+++ b/reports/report01.html
@@ -15,7 +15,9 @@
     <label>암호 확인* <input type="password" size="12"></label><br>
     <label>모바일 폰* <input type="tel" size="13" placeholder="010-0000-0000"></label><br>
     <label>개인 홈페이지 <input type="url" size="30" placeholder="http://"></label><br>
-    <label>주소* <input type="text" size="30"><br></label><br>
+    <label>주소* <input type="text" size="30"></label><br><br>
+
+    <div>학력</div><br>
 
     <label>학교 명* <input type="text" size="12"></label><br>
     <label>전공* <input type="text" size="12"></label><br>
@@ -26,8 +28,9 @@
             <option value="3">졸업</option>
         </select>
     </label><br>
-    <label>졸업(예정)일 <input type="date"></label><br>
+    <label>졸업(예정)일 <input type="date"></label><br><br>
 
+    <div>업무경력</div><br>
 
     <label>근무업체명 <input type="text" size="20"></label><br>
     <label>직위 <input type="text" size="10"></label><br>
