--- a/reports/report01.html
+++ b/reports/report01.html
@@ -36,8 +36,11 @@
     <label>직위 <input type="text" size="10"></label><br>
     <label>담당업무 <textarea cols="80" rows="10">이전 업체에서 담당한 업무를 기술하시오.
     </textarea></label><br>
-    <label>근무년수 <input type="number" min="0.0" max="10.0" step="0.5"></label><br>
+    <label>근무년수 <input type="number" min="0.0" max="10.0" step="0.5">년</label><br><br>
 
+    <div>자기소개서</div><br>
+
+    <label>첨부파일 <input type="file"></label><br>
 </form>
 </body>
 </html>
