--- a/reports/report01.html
+++ b/reports/report01.html
@@ -40,7 +40,10 @@
 
     <div>자기소개서</div><br>
 
-    <label>첨부파일 <input type="file"></label><br>
+    <label>첨부파일 <input type="file"></label><br><br>
+    <input type="submit" value="제출">
+    <input type="reset" value="재작성">
+
 </form>
 </body>
 </html>
