--- a/reports/report01.html
+++ b/reports/report01.html
@@ -5,7 +5,7 @@
     <title>report01</title>
 </head>
 <body>
-<h1>취업 정보 계정 만들기</h1><br>
+<h2>취업 정보 계정 만들기</h2>
 <div>* 필수 입력 항목</div><br>
 <div>기본 정보</div><br>
 <form>
