--- a/reports/report01.html
+++ b/reports/report01.html
@@ -23,7 +23,7 @@
     <label>전 공* <input type="text" name="major" size="12"></label><br>
     <label>졸업 여부*
         <select name="graduation">
-            <option value="1" >--선택--</option>
+            <option value="1" >---선택---</option>
             <option value="2">졸업예정</option>
             <option value="3">졸업</option>
         </select>
