--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title>Lee Home</title>
 </head>
 <body>
-홈 페이지 방문을 환영합니다.
+<h2>실습 예제</h2>
+<hr>
+<ul>
+<li><a href="lab/lab02_01.html">실습 2_1</a></li>
+<li><a href="lab/lab03_01.html">실습 3_1</a>
+     <a href="lab/lab03_02.html">실습 3_2</a>
+     <a href="lab/lab03_03.html">실습 3_3</a></li>
+<li><a href="lab/lab04_01.html">실습 4_1</a>
+     <a href="lab/lab04_02.html">실습 4_2</a>
+     <a href="lab/lab04_03.html">실습 4_3</a>
+     <a href="lab/lab04_04.html">실습 4_4</a></li>
+</ul>
+<hr>
+<h2>과제</h2> <hr>
+<ol>
+    <li><a href="reports/report01.html">과제 1</a></li>
+</ol>
 </body>
 </html>
