--- a/reports/report02.html
+++ b/reports/report02.html
@@ -13,42 +13,50 @@
 <body>
 <h2>취업 정보 계정 만들기</h2>
 <p style="color: red; font-size: 10pt">* 필수 입력 항목</p>
-<div>기본 정보</div><br>
 <form>
-    <span>이 름<span5>*</span5></span><input type="text" name="usr_name" size="8"><br>
-    <span>이메일<span5>*</span5></span><input type="email" name="emailaddress" size="15" placeholder="id@domain_name"><br>
-    <span>암호<span5>*</span5></span><input type="password" name="pw" size="12"><br>
-    <span>암호 확인<span5>*</span5></span><input type="password" name="pwcheck" size="12"><br>
-    <span>모바일 폰<span5>*</span5></span><input type="tel" name="mobile" size="13" placeholder="010-0000-0000"><br>
-    <span>개인 홈페이지</span><input type="url" name="page" size="30" placeholder="http://"><br>
-    <span>주소<span5>*</span5></span><input type="text" name="address" size="30"><br><br>
-</form>
-    <div>학 력</div><br>
-<form>
-    <span>학교 명<span5>*</span5></span><input type="text" name="school" size="12"><br>
-    <span>전 공<span5>*</span5></span><input type="text" name="major" size="12"><br>
+    <div>기본 정보</div><p></p>
+    <span>이 름<span5>*</span5></span>
+    <input type="text" name="usr_name" size="8"><p></p>
+    <span>이메일<span5>*</span5></span>
+    <input type="email" name="emailaddress" size="15" placeholder="id@domain_name"><p></p>
+    <span>암호<span5>*</span5></span>
+    <input type="password" name="pw" size="12"><p></p>
+    <span>암호 확인<span5>*</span5></span>
+    <input type="password" name="pwcheck" size="12"><p></p>
+    <span>모바일 폰<span5>*</span5></span>
+    <input type="tel" name="mobile" size="13" placeholder="010-0000-0000"><p></p>
+    <span>개인 홈페이지</span>
+    <input type="url" name="page" size="30" placeholder="http://"><p></p>
+    <span>주소<span5>*</span5></span>
+    <input type="text" name="address" size="30"><p></p>
+
+    <div>학 력</div><p></p>
+    <span>학교 명<span5>*</span5></span>
+    <input type="text" name="school" size="12"><p></p>
+    <span>전 공<span5>*</span5></span>
+    <input type="text" name="major" size="12"><p></p>
     <span>졸업 여부<span5>*</span5></span>
         <select name="graduation">
             <option value="1" >---선택---</option>
             <option value="2">졸업예정</option>
             <option value="3">졸업</option>
-        </select>
-    <br>
-    <span>졸업(예정)일</span><input type="date" name="gradudate"><br><br>
-</form>
-    <div>업무 경력</div><br>
-<form>
-    <span>근무업체명</span><input type="text" name="company" size="20"><br>
-    <span>직 위</span><input type="text" name="position" size="10"><br>
-    <span>담당 업무</span><textarea cols="80" rows="10">
-    이전 업체에서 담당한 업무를 기술하시오.
-    </textarea><br>
-    <span>근무년수</span><input type="number" name="workyears" min="0.0" max="10.0" step="0.5">년<br><br>
-</form>
-    <div>자기소개서</div><br>
+        </select><p></p>
+    <span>졸업(예정)일</span>
+    <input type="date" name="gradudate"><p></p>
 
-<span>첨부 파일</span><input type="file"><br>
+    <div>업무 경력</div><p></p>
+    <span>근무업체명</span>
+    <input type="text" name="company" size="20"><p></p>
+    <span>직 위</span>
+    <input type="text" name="position" size="10"><p></p>
+    <span>담당 업무</span>
+    <textarea cols="80" rows="10">이전 업체에서 담당한 업무를 기술하시오.</textarea><p></p>
+    <span>근무년수</span>
+    <input type="number" name="workyears" min="0.0" max="10.0" step="0.5">년<p></p>
+    <div>자기소개서</div><p></p>
+<span>첨부 파일</span><input type="file"><p></p>
     <p style="margin-left: 200px"> <input type="submit" value="제출">
     <input type="reset" value="재작성"></p>
+</form>
 </body>
 </html>
