--- a/reports/report03_2.html
+++ b/reports/report03_2.html
@@ -10,7 +10,7 @@
             for(var i = prev_row.length - 1; i > 0; i--){
                 row[i] = prev_row[i-1] + prev_row[i];
             }
-            return row
+            return row;
         }
         var row = [1, 1];
         for (var j = 1; j <= height; j++){
