기본 테이블 만들기

--- a/lab/lab07_02.html
+++ b/lab/lab07_02.html
@@ -6,7 +6,7 @@
     <style>
         table {
             border: 1px solid black;
-            border-collapse: collapse; /*경계선을 합치는 역할을 한다.*/
+            border-collapse: collapse; /*경계선을 합치는 역할을 한다..*/
         }
         th, td {
             border: 1px dotted green;
