--- a/reports/report03_2.html
+++ b/reports/report03_2.html
@@ -4,20 +4,43 @@
     <meta charset="UTF-8">
     <title>파스칼 삼각형</title>
     <script>
+        function new_row(prev_row) {
+            var a = [];
+            a.push(1);
+            for(var i=1;i<prev_row.length;i++){
+                a[i] = prev_row[i-1] + prev_row[i]
+            }
+            a.push(1);
+            return a;
+        }
+
         var height = prompt("파스칼 삼각형의 높이");
         height = parseInt(height);
-        function new_row(prev_row) {
-            for(var i = prev_row.length - 1; i > 0; i--){
-                row[i] = prev_row[i-1] + prev_row[i];
-            }
-            return row;
-        }
-        var row = [1, 1];
-        for (var j = 1; j <= height; j++){
-            new_row(row);
-            document.write(row);
 
+        row = [];
+        if (height==1) {
+            row.push([1]);
         }
+        else if (height==2){
+            row.push([1]);
+            row.push([1,1]);
+        }
+        else {
+            row.push([1]);
+            row.push([1, 1]);
+            var b = row[1];
+            for (var h = 2; h < height; h++) {
+                b = new_row(b);
+                row.push(b)
+            }
+        }
+
+        for (var i = 0; i < row.length; i ++){
+            for (var j = 0; j < row[i].length; j ++)
+                document.write(row[i][j] + "  ");
+            document.write("<br>")
+        }
+
     </script>
 </head>
 <body>
