과제 3 반영 index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <ol>
     <li><a href="reports/report01.html">과제 1</a></li>
     <li><a href="reports/report02.html">과제 2</a></li>
-    <li><a href="reports/report03_1.html">과제 3_1</a></li>
-    <li><a href="reports/report03_2.html">과제 3_2</a></li>
+    <li><a href="reports/report03_1.html">과제 3_1</a>
+        <a href="reports/report03_2.html">과제 3_2</a></li>
 </ol>
 </body>
 </html>
