--- a/reports/report03_1.html
+++ b/reports/report03_1.html
@@ -76,7 +76,7 @@
             document.write("2진수 " + num + " 을 16진수로 변환하면 " + hex_list.join('')+ " 입니다." );
         }
         else
-            document.write("2진수를 다시 입력하세요.")    //입력된 값이 2진수가 아닐 때 출력문.
+            document.write("2진수를 다시 입력하세요.")    //입력된 값이 2진수가 아닐 때 출력할 문장.
 
     </script>
 </head>
