--- a/reports/report03_2.html
+++ b/reports/report03_2.html
@@ -25,6 +25,9 @@
             row.push([1]);
             row.push([1,1]);
         }
+        else if (height <= 0){
+            document.write("삼각형의 높이로 1 이상의 정수를 입력해주세요.");   //삼각형의 높이로 0이하의 값이 입력되었을 때
+        }
         else {
             row.push([1]);
             row.push([1, 1]);
