--- a/reports/report04.html
+++ b/reports/report04.html
@@ -8,17 +8,123 @@
     <script src="https://cdn.jsdelivr.net/npm/bootsrtap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
 
-
         function transform() {
+            var num = prompt("2진수를 입력하세요");
+            var num_split = num.split('');
+            var bin_list = [];
 
+            if (num_split.length % 4 == 0) {
+                for (var i=0; i+4 <= num_split.length; i=i+4){
+                    var num_list = num_split.slice(i, i+4);
+                    num_list = num_list.join('');
+                    bin_list.push(num_list);
+                } // 입력된 값을 4자리씩 잘라서 bin_list에 넣기.
+
+                var hex;
+                var hex_list = [];
+
+                for(var j=0; j<bin_list.length; j++){
+                    var bin = bin_list[j];
+                    switch (bin){
+                        case "0000":
+                            hex = 0;
+                            break;
+                        case "0001":
+                            hex = 1;
+                            break;
+                        case "0010":
+                            hex = 2;
+                            break;
+                        case "0011":
+                            hex = 3;
+                            break;
+                        case "0100":
+                            hex = 4;
+                            break;
+                        case "0101":
+                            hex = 5;
+                            break;
+                        case "0110":
+                            hex = 6;
+                            break;
+                        case "0111":
+                            hex = 7;
+                            break;
+                        case "1000":
+                            hex = 8;
+                            break;
+                        case "1001":
+                            hex = 9;
+                            break;
+                        case "1010":
+                            hex = "A";
+                            break;
+                        case "1011":
+                            hex = "B";
+                            break;
+                        case "1100":
+                            hex = "C";
+                            break;
+                        case "1101":
+                            hex = "D";
+                            break;
+                        case "1110":
+                            hex = "E";
+                            break;
+                        case "1111":
+                            hex = "F";
+                            break;
+                    }
+                    hex_list.push(hex);
+                } //2진수에서 16진수로 변환.
+
+                document.write("2진수 " + num + " 을 16진수로 변환하면 " + hex_list.join('')+ " 입니다." );
+            }
+            else
+                document.write("2진수를 다시 입력하세요.")    //입력된 값이 2진수가 아닐 때 출력할 문장.
         }
 
 
-
-
         function pascals() {
+               function new_row(prev_row) {
+                var a = [];
+                a.push(1);
+                for(var i=1;i<prev_row.length;i++){
+                    a[i] = prev_row[i-1] + prev_row[i]
+                }
+                a.push(1);
+                return a;
+            }  //new_row 함수 생성
 
+            var height = prompt("파스칼 삼각형의 높이");
+            height = parseInt(height);  //삼각형 높이 입력 받기
 
+            row = [];
+            if (height==1) {
+                row.push([1]);
+            }
+            else if (height==2){
+                row.push([1]);
+                row.push([1,1]);
+            }
+            else if (height <= 0){
+                document.write("삼각형의 높이로 1 이상의 정수를 입력해주세요.");   //삼각형의 높이로 0이하의 값이 입력되었을 때
+            }
+            else {
+                row.push([1]);
+                row.push([1, 1]);
+                var b = row[1];
+                for (var h = 2; h < height; h++) {
+                    b = new_row(b);
+                    row.push(b)
+                }
+            }   //삼각형의 높이가 1, 2, 그 외로 케이스를 나누어 2차원 배열 생성
+
+            for (var i = 0; i < row.length; i ++){
+                for (var j = 0; j < row[i].length; j ++)
+                    document.write(row[i][j] + "  ");
+                document.write("<br>")
+            }   // 파스칼 삼각형 출력
 
         }
     </script>
