--- a/reports/report04.html
+++ b/reports/report04.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <title>자바스크립트 프로그래밍</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootsrtap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootsrtap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-
+        //id가 "digit"인 입력요소의 값(2진수)를 읽어 16진수로 변환하여 그 수를 id가 "hexanum" 입력 요소에
+        // 디스플레이 하는 기능의 함수
         function transform() {
-            var num = prompt("2진수를 입력하세요");
+            var num = document.getElementById('digit').value;
             var num_split = num.split('');
             var bin_list = [];
 
             if (num_split.length % 4 == 0) {
-                for (var i=0; i+4 <= num_split.length; i=i+4){
-                    var num_list = num_split.slice(i, i+4);
+                for (var i = 0; i + 4 <= num_split.length; i = i + 4) {
+                    var num_list = num_split.slice(i, i + 4);
                     num_list = num_list.join('');
                     bin_list.push(num_list);
                 } // 입력된 값을 4자리씩 잘라서 bin_list에 넣기.
@@ -23,9 +24,9 @@
                 var hex;
                 var hex_list = [];
 
-                for(var j=0; j<bin_list.length; j++){
+                for (var j = 0; j < bin_list.length; j++) {
                     var bin = bin_list[j];
-                    switch (bin){
+                    switch (bin) {
                         case "0000":
                             hex = 0;
                             break;
@@ -77,16 +78,16 @@
                     }
                     hex_list.push(hex);
                 } //2진수에서 16진수로 변환.
-
-                document.write("2진수 " + num + " 을 16진수로 변환하면 " + hex_list.join('')+ " 입니다." );
+                document.getElementById("hexanum").value = hex_list.join('');
             }
             else
-                document.write("2진수를 다시 입력하세요.")    //입력된 값이 2진수가 아닐 때 출력할 문장.
+            document.getElementById("hexanum").value = "2진수를 다시 입력하세요.";  //입력된 값이 2진수가 아닐 때 출력할 문장.
         }
 
-
+        // id가 "size"인 입력 요소의 값을 읽어 해당 크기의 파스칼 삼각형을 id가 "draw_area"인 영역에
+        // 그리는 기능의 함수
         function pascals() {
-               function new_row(prev_row) {
+            function new_row(prev_row) {
                 var a = [];
                 a.push(1);
                 for(var i=1;i<prev_row.length;i++){
@@ -96,7 +97,7 @@
                 return a;
             }  //new_row 함수 생성
 
-            var height = prompt("파스칼 삼각형의 높이");
+            var height = document.getElementById("size").value;
             height = parseInt(height);  //삼각형 높이 입력 받기
 
             row = [];
@@ -106,9 +107,6 @@
             else if (height==2){
                 row.push([1]);
                 row.push([1,1]);
-            }
-            else if (height <= 0){
-                document.write("삼각형의 높이로 1 이상의 정수를 입력해주세요.");   //삼각형의 높이로 0이하의 값이 입력되었을 때
             }
             else {
                 row.push([1]);
@@ -122,11 +120,11 @@
 
             for (var i = 0; i < row.length; i ++){
                 for (var j = 0; j < row[i].length; j ++)
-                    document.write(row[i][j] + "  ");
-                document.write("<br>")
+                     document.getElementById("draw_area").innerHTML += (row[i][j] + "  ");
+                 document.getElementById("draw_area").innerHTML += "<br>";
             }   // 파스칼 삼각형 출력
-
         }
+
     </script>
 </head>
 <body>
