홈페이지 템플릿

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <link href="bootstrap-5.2.3-examples/blog/blog.css" rel="stylesheet"> <!--글씨체-->
   </head>
   <body>
-    
+
 <div class="container">
   <header class="blog-header lh-1 py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
@@ -98,8 +98,8 @@
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
       <a class="p-2 link-secondary" href="contents/index.html">AboutMe</a>
-      <a class="p-2 link-secondary" href="lab/index.html">Lab</a>
-      <a class="p-2 link-secondary" href="reports/index.html">Report</a>
+      <a class="p-2 link-secondary" href="Portfolios/lab/index.html">Lab</a>
+      <a class="p-2 link-secondary" href="Portfolios/reports/index.html">Report</a>
       <a class="p-2 link-secondary" href="#">Regression Analysis</a>
       <a class="p-2 link-secondary" href="#">Database Application</a>
       <a class="p-2 link-secondary" href="#">Mathematical Statistics</a>
