--- a/Portfolios/lab/lab06_01.html
+++ b/Portfolios/lab/lab06_01.html
@@ -46,7 +46,7 @@
 <ul>
     <li><a href="/index.html">Home</a></li>
     <li><a href="/contents/lect_notes.html">Lecture Notes</a></li>
-    <li><a href="/reports/report.html">Reports</a></li>
+    <li><a href="/Portfolios/reports/report.html">Reports</a></li>
     <li><a href="/contents/questions/qna.html">Q&amp;A</a></li>
 </ul>
 </header>
