인덱스 페이지

--- a/lab/lab06_01.html
+++ b/lab/lab06_01.html
@@ -46,8 +46,8 @@
 <ul>
     <li><a href="/index.html">Home</a></li>
     <li><a href="/contents/lect_notes.html">Lecture Notes</a></li>
-    <li><a href="/Portfolios/reports/report.html">Reports</a></li>
-    <li><a href="/contents/questions/qna.html">Q&amp;A</a></li>
+    <li><a href="/reports/report.html">Reports</a></li>
+    <li><a href="/questions/qna.html">Q&amp;A</a></li>
 </ul>
 </header>
 <div class="blue">학습 내용</div>
