--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,11 @@
     <title>Minhee Lee Home</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/blog/">
+
+
+
+
+
 <link href="bootstrap-5.2.3-examples/assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -60,8 +65,8 @@
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
       <a class="p-2 link-secondary" href="contents/index.html">AboutMe</a>
-      <a class="p-2 link-secondary" href="Portfolios/lab/index.html">Lab</a>
-      <a class="p-2 link-secondary" href="Portfolios/reports/index.html">Report</a>
+      <a class="p-2 link-secondary" href="lab/index.html">Lab</a>
+      <a class="p-2 link-secondary" href="reports/index.html">Report</a>
       <a class="p-2 link-secondary" href="#">Regression Analysis</a>
       <a class="p-2 link-secondary" href="#">Database Application</a>
       <a class="p-2 link-secondary" href="#">Mathematical Statistics</a>
