--- a/lab/bootstrap_ex/menu2.html
+++ b/lab/bootstrap_ex/menu2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>메뉴</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+    <script src="../../js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -19,14 +19,14 @@
         <div id="my_navbar" class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contents/about/index.html">About me</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
-                       href="index.html">Portfolios</a>
+                       href="../../index.html">Portfolios</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href=#></a>객체프로그래밍</li>
                         <li><a class="dropdown-item" href=#></a>데이터베이스응용</li>
@@ -34,7 +34,7 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href=#>Favorites</a></li>
-                <li class="nav-item"><a class="nav-link" href="contents/questions/index.html">Q&A</a></li>
+                <li class="nav-item"><a class="nav-link" href="../../questions/index.html">Q&A</a></li>
             </ul>
         </div>
     </div>
