인덱스 페이지 만들기

--- a/statistics/index.html
+++ b/statistics/index.html
@@ -71,6 +71,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="../bootstrap-5.2.3-examples/blog/blog.css" rel="stylesheet"> <!--글씨체-->
+    <link rel="stylesheet" href="../css/boostrap.css">
 </head>
 <body>
 
@@ -81,7 +82,7 @@
         <a class="link-secondary" href="#"></a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-primary" href="#">Minhee</a>
+        <a class="blog-header-logo text-primary" href="../index.html">Minhee</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="link-secondary" href="#" aria-label="Search">
@@ -93,15 +94,68 @@
 
   <div class="nav-scroller py-1 mb-2">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="contents/index.html">AboutMe</a>
-      <a class="p-2 link-secondary" href="lab/index.html">Lab</a>
-      <a class="p-2 link-secondary" href="reports/index.html">Report</a>
-      <a class="p-2 link-secondary" href="regression/index.html">Regression Analysis</a>
-      <a class="p-2 link-secondary" href="databaseApplication/index.html">Database Application</a>
-      <a class="p-2 link-secondary" href="statistics/index.html">Mathematical Statistics</a>
-      <a class="p-2 link-secondary" href="java/index.html">Java</a>
+      <a class="p-2 link-secondary" href="../contents/index.html">AboutMe</a>
+      <a class="p-2 link-secondary" href="../lab/index.html">Lab</a>
+      <a class="p-2 link-secondary" href="../reports/index.html">Report</a>
+      <a class="p-2 link-secondary" href="../regression/index.html">Regression Analysis</a>
+      <a class="p-2 link-secondary" href="../databaseApplication/index.html">Database Application</a>
+      <a class="p-2 link-secondary" href="../statistics/index.html">Mathematical Statistics</a>
+      <a class="p-2 link-secondary" href="../java/index.html">Java</a>
     </nav>
   </div>
+</div>
+<hr>
+
+<div class="col-3 text-center">
+    <a class="blog-header-logo text-dark" href="../reports/index.html">Report</a>
+</div>
+<p></p>
+
+<div class="container">
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>날짜</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td><a href="../reports/report01.html">report 1</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td><a href="../reports/report02.html">report 2</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td><a href="../reports/report03_1.html">report 3_1</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td><a href="../reports/report03_2.html">report 3_2</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td><a href="../reports/report04.html">report 4</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        </tbody>
+    </table>
+
+
 </div>
 </body>
 </html>
