컨텐츠 만들기

--- a/regression/index.html
+++ b/regression/index.html
@@ -138,6 +138,12 @@
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
+        <tr>
+            <td>4</td>
+            <td><a href="../regression/report4.html">regression report 4</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
         </tbody>
     </table>
 
