--- a/regression/report1.html
+++ b/regression/report1.html
@@ -5,10 +5,14 @@
     <title>report1</title>
 </head>
 <body>
-
-<div class="align-content-center">
- <iframe src="https://o365dongduk-my.sharepoint.com/personal/u20210853_office_dongduk_ac_kr/_layouts/15/Doc.aspx?sourcedoc={c21f7f91-0385-4afb-b9ae-1b7581cc9cb8}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" width="900px" height="600px" frameborder="0">포함된 <a target="_blank" href="https://office.com">Microsoft Office</a> 프레젠테이션, 제공: <a target="_blank" href="https://office.com/webapps">Office</a></iframe>
-</div>
+<style>
+    #title { width:100%; height:30px; background:#0b5ed7; color:white; display: flex; justify-content: center;}
+    #frame { width:100%; height:500px;}
+    #text {width: 100%; height: 30px; background:#0b5ed7; color:white; display: flex; justify-content: center; align-items: center;}
+</style>
+<div id="title">회귀분석 과제1 2장</div>
+<iframe id = "frame" src="https://o365dongduk-my.sharepoint.com/personal/u20210853_office_dongduk_ac_kr/_layouts/15/Doc.aspx?sourcedoc={c21f7f91-0385-4afb-b9ae-1b7581cc9cb8}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" width="900px" height="600px" frameborder="0">포함된 <a target="_blank" href="https://office.com">Microsoft Office</a> 프레젠테이션, 제공: <a target="_blank" href="https://office.com/webapps">Office</a></iframe>
+<div id="text">행렬</div>
 
 </body>
 </html>
