--- a/regression/report3.html
+++ b/regression/report3.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>report3</title>
 </head>
 <body>
+<style>
+    #title { width:100%; height:30px; background:#0b5ed7; color:white; display: flex; justify-content: center;}
+    #frame { width:100%; height:500px;}
+    #text {width: 100%; height: 30px; background:#0b5ed7; color:white; display: flex; justify-content: center; align-items: center;}
+</style>
+<div id="title">회귀분석 과제3 4장</div>
+<iframe id="frame" src="https://o365dongduk-my.sharepoint.com/personal/u20210853_office_dongduk_ac_kr/_layouts/15/Doc.aspx?sourcedoc={1eb42486-c704-4fe3-a557-2c9f0079f0c8}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">포함된 <a target="_blank" href="https://office.com">Microsoft Office</a> 프레젠테이션, 제공: <a target="_blank" href="https://office.com/webapps">Office</a></iframe>
+<div id="text">단순선형회귀모형 검정</div>
 
 </body>
 </html>
