컨텐츠 만들기

--- a/statistics/index.html
+++ b/statistics/index.html
@@ -107,7 +107,7 @@
 <hr>
 
 <div class="col-3 text-center">
-    <a class="blog-header-logo text-dark" href="../reports/index.html">Report</a>
+    <a class="blog-header-logo text-dark" href="../reports/index.html">Statistic</a>
 </div>
 <p></p>
 
@@ -124,34 +124,21 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td><a href="../reports/report01.html">report 1</a></td>
+            <td><a href="../statistics/note01.html">note01</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
         <tr>
             <td>2</td>
-            <td><a href="../reports/report02.html">report 2</a></td>
+            <td><a href="../statistics/note02.html">note02</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
         <tr>
             <td>3</td>
-            <td><a href="../reports/report03_1.html">report 3_1</a></td>
+            <td><a href="../statistics/note03.html">note03</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td><a href="../reports/report03_2.html">report 3_2</a></td>
-            <td>이민희</td>
-            <td>2022.12.27</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td><a href="../reports/report04.html">report 4</a></td>
-            <td>이민희</td>
-            <td>2022.12.27</td>
-        </tr>
         </tbody>
     </table>
 
