--- a/statistics/note02.html
+++ b/statistics/note02.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="UTF-8">
+<title>note02</title>
 </head>
 <body>
-
+    <iframe width="100%" height="600" src="수리통계학%202%20vol.2.pdf"></iframe>
 </body>
 </html>
