--- a/statistics/note03.html
+++ b/statistics/note03.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>pdf 뷰어 테스트</title>
+<title>note03</title>
 </head>
 <body>
-    <iframe width="100%" height="600" src="./compressed.tracemonkey-pldi-09.pdf"></iframe>
+    <iframe width="100%" height="600" src="../statistics/수리통계학 2 vol.3.pdf"></iframe>
 </body>
 </html>
