--- a/statistics/note01.html
+++ b/statistics/note01.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<meta charset="UTF-8">
+<title>note01</title>
 </head>
 <body>
-
+    <iframe width="100%" height="600" src="../statistics/수리통계학 2 vol.1.pdf"></iframe>
 </body>
 </html>
