--- a/statistics/index.html
+++ b/statistics/index.html
@@ -98,7 +98,7 @@
       <a class="p-2 link-secondary" href="../lab/index.html">Lab</a>
       <a class="p-2 link-secondary" href="../reports/index.html">Report</a>
       <a class="p-2 link-secondary" href="../regression/index.html">Regression Analysis</a>
-      <a class="p-2 link-secondary" href="../databaseApplication/index.html">Database Application</a>
+      <a class="p-2 link-secondary" href="../db/index.html">Database Application</a>
       <a class="p-2 link-secondary" href="../statistics/index.html">Mathematical Statistics</a>
       <a class="p-2 link-secondary" href="../java/index.html">Java</a>
     </nav>
@@ -139,6 +139,7 @@
             <td><a href="../statistics/note03.html">note03</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
+        </tr>
         </tbody>
     </table>
 
