--- a/regression/index.html
+++ b/regression/index.html
@@ -96,7 +96,7 @@
       <a class="p-2 link-secondary" href="../lab/index.html">Lab</a>
       <a class="p-2 link-secondary" href="../reports/index.html">Report</a>
       <a class="p-2 link-secondary" href="../regression/index.html">Regression Analysis</a>
-      <a class="p-2 link-secondary" href="../databaseApplication/index.html">Database Application</a>
+      <a class="p-2 link-secondary" href="../db/index.html">Database Application</a>
       <a class="p-2 link-secondary" href="../statistics/index.html">Mathematical Statistics</a>
       <a class="p-2 link-secondary" href="../java/index.html">Java</a>
     </nav>
