데이터 마이닝 컨텐츠

--- a/db/index.html
+++ b/db/index.html
@@ -100,7 +100,7 @@
       <a class="p-2 link-secondary" href="../regression/index.html">Regression Analysis</a>
       <a class="p-2 link-secondary" href="../db/index.html">Database Application</a>
       <a class="p-2 link-secondary" href="../statistics/index.html">Mathematical Statistics</a>
-      <a class="p-2 link-secondary" href="../java/index.html">Java</a>
+      <a class="p-2 link-secondary" href="../datamining/index.html">Data Mining</a>
     </nav>
   </div>
 </div>
