--- a/Kelly/portfolio.html
+++ b/Kelly/portfolio.html
@@ -10,22 +10,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../Kelly/assets/img/favicon.png" rel="icon">
+  <link href="../Kelly/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../Kelly/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../Kelly/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../Kelly/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../Kelly/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../Kelly/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../Kelly/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../Kelly/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Kelly - v4.10.0
@@ -41,28 +41,24 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Kelly</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="../index.html">Kelly</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../aboutme/index.html">AboutMe</a></li>
+          <li><a href="../contents/index.html">MyInterest</a></li>
+          <li><a href="../lab/index.html">Lab</a></li>
+          <li><a href="../reports/index.html">Report</a></li>
+          <li><a class="active" href="../regression/index.html">Regression Analysis</a></li>
+          <li><a href="../db/index.html">Data Application</a></li>
+          <li><a href="../statistics/index.html">Mathematical Statistic</a></li>
+          <li><a href="../datamining/index.html">Data Mining</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
-      <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
-      </div>
 
     </div>
 
@@ -75,10 +71,44 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Regression Analysis</h2>
+          <p>회귀분석을 수강하면서 만들 과제물들이다.</p>
         </div>
 
+<div class="container">
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>날짜</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td><a href="../statistics/note01.html">note01</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td><a href="../statistics/note02.html">note02</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td><a href="../statistics/note03.html">note03</a></td>
+            <td>이민희</td>
+            <td>2022.12.27</td>
+        </tr>
+        </tbody>
+    </table>
+
+
+</div>
       </div>
     </section><!-- End Portfolio Section -->
 
@@ -104,17 +134,17 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="../Kelly/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../Kelly/assets/vendor/aos/aos.js"></script>
+  <script src="../Kelly/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../Kelly/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../Kelly/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../Kelly/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../Kelly/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="../Kelly/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../Kelly/assets/js/main.js"></script>
 
 </body>
 
