--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Minhee Lee</h1>
-      <h2>I'm a student from Seoul</h2>
+      <h2>I'm a student from Seoul. I study Information Statistics.</h2>
       <a href="aboutme/index.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
