--- a/Kelly/portfolio.html
+++ b/Kelly/portfolio.html
@@ -53,7 +53,7 @@
           <li><a href="../lab/index.html">Lab</a></li>
           <li><a href="../reports/index.html">Report</a></li>
           <li><a class="active" href="../regression/index.html">Regression Analysis</a></li>
-          <li><a href="../db/index.html">Data Application</a></li>
+          <li><a href="../db/index.html">Database Application</a></li>
           <li><a href="../statistics/index.html">Mathematical Statistic</a></li>
           <li><a href="../datamining/index.html">Data Mining</a></li>
         </ul>
@@ -74,7 +74,6 @@
           <h2>Regression Analysis</h2>
           <p>회귀분석을 수강하면서 만들 과제물들이다.</p>
         </div>
-
 <div class="container">
     <table class="table table-hover">
         <thead>
@@ -88,19 +87,13 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td><a href="../statistics/note01.html">note01</a></td>
+            <td><a href="../db/report01.html">database report01</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
         <tr>
             <td>2</td>
-            <td><a href="../statistics/note02.html">note02</a></td>
-            <td>이민희</td>
-            <td>2022.12.27</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td><a href="../statistics/note03.html">note03</a></td>
+            <td><a href="../db/report02.html">database report02</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
