--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="lab/index.html">Lab</a></li>
           <li><a href="reports/index.html">Report</a></li>
           <li><a href="regression/index.html">Regression Analysis</a></li>
-          <li><a href="db/index.html">Data Application</a></li>
+          <li><a href="db/index.html">Database Application</a></li>
           <li><a href="statistics/index.html">Mathematical Statistic</a></li>
           <li><a href="datamining/index.html">Data Mining</a></li>
 
