--- a/regression/index.html
+++ b/regression/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="../index.html">Kelly</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="../index.html">Minhee</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -53,7 +53,7 @@
           <li><a href="../lab/index.html">Lab</a></li>
           <li><a href="../reports/index.html">Report</a></li>
           <li><a class="active" href="../regression/index.html">Regression Analysis</a></li>
-          <li><a href="../db/index.html">Data Application</a></li>
+          <li><a href="../db/index.html">Database Application</a></li>
           <li><a href="../statistics/index.html">Mathematical Statistic</a></li>
           <li><a href="../datamining/index.html">Data Mining</a></li>
         </ul>
