--- a/Kelly/portfolio.html
+++ b/Kelly/portfolio.html
@@ -41,7 +41,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="../index.html">Kelly</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="../index.html">Minhee</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -87,13 +87,7 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td><a href="../db/report01.html">database report01</a></td>
-            <td>이민희</td>
-            <td>2022.12.27</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td><a href="../db/report02.html">database report02</a></td>
+            <td><a href="../datamining/note01.html">machine learning note</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
