--- a/statistics/index.html
+++ b/statistics/index.html
@@ -72,7 +72,7 @@
 
         <div class="section-title">
           <h2>Mathematical Statistics</h2>
-          <p>수리통계학을 수강하면서 만든 필기들이다.</p>
+          <p>수리통계학을 수강하면서 만든 노트들이다.</p>
         </div>
 
 <div class="container">
