--- a/Kelly/portfolio-details.html
+++ b/Kelly/portfolio-details.html
@@ -44,43 +44,26 @@
       <div class="container">
 
         <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
-            </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+              <h2>내가 좋아하는 후지이 카제의 커버들</h2>
+
+              <p>후지이 카제는 일본의 싱어송라이터 이다. 그는 가수로서 데뷔를 하기 이전자신의 유투브 채널에 커버 영상들을 올렸었다.
+              그의 커버들을 한 마디로 표현하자면 "자유롭다". 마치 그의 카제(바람)라는 이름과도 같다. 연주들이 틀에 매여 있지 않고
+              자유로히, 당당하게 전개된다.
+                내가 개인적으로 좋아하는 후지이 카제의 커버 영상들을 소개해 보겠다.</p>
+
+              1. 椎名林檎 - 長く短い祭 耳コピ<br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/nsUL1X9aojU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+              <p>동경사변의 길고 짧은 축제 라는 곡을 청음하여 친(耳コピ) 피아노 커버이다.
+              원곡은 목소리에 강하게 입혀진 전자음때문에 퓨처리스틱한 느낌이 드는데, 이 커버는 오로지 클래식 피아노만 사용되어
+              색다른 매력이 있다.
+              1:30 부근부터 원곡과는 살짝 다른 방식으로 전개가 되는데, 이때부터 자유로히 연주하는 모습이 인상적이다.
+              원곡의 축제 같은 분위기를 화려하게 다른 방식으로 잘 표현했다.</p>
+
+              2. 丸の内サディスティック(轢き逃げ)<br>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/MXL9sQMjRSM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+              시이나 링고의 마루노우치 새디스틱을 커버한 영상이다.
+
             </div>
           </div>
 
