--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -72,7 +72,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi! I'm Minhee Lee. I go to Dongduk Women University. My major is Information Statistic.</p>
+          <p>Hi! I'm Minhee Lee. I go to Dongduk Women University. My major is Information Statistics.</p>
         </div>
 
         <div class="row">
