--- a/Kelly/portfolio-details.html
+++ b/Kelly/portfolio-details.html
@@ -45,6 +45,7 @@
 
         <div class="row gy-4">
             <div class="portfolio-description">
+              <h1>내가 좋아하는 음악과 영화 중 하나만 골라서 자세히 리뷰</h1>
               <h2>내가 좋아하는 후지이 카제의 커버들</h2>
 
               <p>후지이 카제는 일본의 싱어송라이터 이다. 그는 가수로서 데뷔를 하기 이전자신의 유투브 채널에 커버 영상들을 올렸었다.
