--- a/db/index.html
+++ b/db/index.html
@@ -87,13 +87,13 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td><a href="../db/report01.html">database report01 데이터베이스 기초</a></td>
+            <td><a href="../db/report01.html">데이터베이스 기초</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
         <tr>
             <td>2</td>
-            <td><a href="../db/report02.html">database report02 데이터베이스 응용</a></td>
+            <td><a href="../db/report02.html">데이터베이스 응용</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
