--- a/datamining/index.html
+++ b/datamining/index.html
@@ -87,7 +87,7 @@
         <tbody>
         <tr>
             <td>1</td>
-            <td><a href="../datamining/note01.html">machine learning note</a></td>
+            <td><a href="../datamining/note01.html">머신러닝 note</a></td>
             <td>이민희</td>
             <td>2022.12.27</td>
         </tr>
